cluster/frontend/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: cloudcomputing
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cloudcomp-frontend
  template:
    metadata:
      labels:
        app: cloudcomp-frontend
    spec:
      containers:
      - name: cloudcomp-frontend
        image: registry.guldner.eu/cloudcomp-frontend:20220104-2038
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: pull-secret
