cluster/frontend/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudcomp-frontend
  labels:
    app: cloudcomp-frontend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: cloudcomp-frontend
