cluster/frontend/resources/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: frontend
  namespace: cloudcomputing
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`schwap.kainzinger.guldner.eu`)
    services:
    - name: cloudcomp-frontend
      scheme: http
      port: 80
  tls:
    secretName: guldner.eu
